refactor: change all query params to rqClient
