# src/domains/admin/entities/transaction/api/transaction-query.ts
@@ -1,8 +1,0 @@
-import { queryOptions } from '@tanstack/react-query';
-
-import { fetchClient } from '~/shared/api';
-
-export const AdminTransactionsQuery = queryOptions({
-  queryKey: ['admin', 'transactions', 'list'],
-  queryFn: () => fetchClient.GET('/admin/transactions'),
-});
